fixed spacing for smaller pc resolutions

--- a/src/Components/Clock.css
+++ b/src/Components/Clock.css
@@ -6,6 +6,7 @@
     flex: 1;
     text-align: center;
     justify-content: center;
+    margin-top: -5.5rem;
 }
 
 .clockHours,
