--- a/src/Components/Focus.css
+++ b/src/Components/Focus.css
@@ -44,7 +44,7 @@
 .focusResult {
     margin-top: -15%;
     list-style-type: none;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 
 .addItem {
@@ -52,7 +52,7 @@
     margin-left: 0.8rem;
     width: 35px;
     height: 25px;
-    font-size: 1.5rem;
+    font-size: 1.5em;
     font-weight: 800;
     background-color: transparent;
     border: none;
