--- a/src/Components/Quotes.css
+++ b/src/Components/Quotes.css
@@ -3,7 +3,7 @@
 .container {
   width: 100%;
   height: 100%;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   padding: 10vh 20px 0;
 }
 
