--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -4,8 +4,8 @@
 }
 .weatherWrapper {
     position: absolute;
-    top: -7rem;
-    right: 2rem;
+    top: -9rem;
+    right: 2.5rem;
     text-align: center;
 }
 
